--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <lin rel="icon" type="image/png" href="img/techis-logo.png">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="icon" type="image/png" href="img/techis-logo.png">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
     <title>MyPortfolio</title>
@@ -30,6 +31,24 @@
         </div>
     </nav>
     
+    <div id="about">
+        <h2><span class="font-primary">A</span>bout</h2>
+        <img src ="img/Seb.jpg">
+        <div class="name">Sebastian Canales</div>
+        <div class ="vocation">Web application developer</div>
+        <div class="skills">HTML / CSS / JavaScript / React.js /Redux / Python /Django / Express.js / AWS (Basics) / Docker (Basics)</div>
+        <p>
+            An SPA That displays subreddit data from Reddit for a specifit time period. As the front end developer, I Worked
+        </p>
+        <div class ="email">spideronyou100@gmail.com</div>
+        <div class="icons">
+            <a href="link"><i class="bi bi-github"></i></a>
+            <a href ="link"><i class="bi bi-linkedin ms-10" ></i></a>
+            
+        </div>
+    </div>
+
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
 </body>
 </html>
