--- a/index.html
+++ b/index.html
@@ -1,54 +1,133 @@
-<!Doctype html>
+<!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
-    <link rel="icon" type="image/png" href="img/techis-logo.png">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css">
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
+    />
+    <link rel="icon" type="image/png" href="img/techis-logo.png" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="style.css" />
     <title>MyPortfolio</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-shadow-sm">
-        <div class="container">
-            <a class="navbar-brand title-icon" href="#"><span class="font-primary">P</span>ortfolio</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggler">
-            <span class="navbar-toggler-icon"></span>
-            </button>
-                <div class="collapse navbar-collapse" id="navbarToggler">
-                    <ul class="navbar-nav ms-auto mb-2">
-                        <li class="nav-item">
-                            <a class="nav-link font-black" href="#about">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link font-black" href="#project">Projects</a>
-                        </li>
-                    </ul>
-                </div>
+      <div class="container">
+        <a class="navbar-brand title-icon" href="#"
+          ><span class="font-primary">P</span>ortfolio</a
+        >
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarToggler"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarToggler">
+          <ul class="navbar-nav ms-auto mb-2">
+            <li class="nav-item">
+              <a class="nav-link font-black" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link font-black" href="#project">Projects</a>
+            </li>
+          </ul>
         </div>
+      </div>
     </nav>
-    
+
     <div id="about">
-        <h2><span class="font-primary">A</span>bout</h2>
-        <img src ="img/Seb.jpg">
-        <div class="name">Sebastian Canales</div>
-        <div class ="vocation">Web application developer</div>
-        <div class="skills">HTML / CSS / JavaScript / React.js /Redux / Python /Django / Express.js / AWS (Basics) / Docker (Basics)</div>
-        <p>
-            An SPA That displays subreddit data from Reddit for a specifit time period. As the front end developer, I Worked
-        </p>
-        <div class ="email">spideronyou100@gmail.com</div>
-        <div class="icons">
-            <a href="link"><i class="bi bi-github"></i></a>
-            <a href ="link"><i class="bi bi-linkedin ms-10" ></i></a>
-            
-        </div>
+      <h2><span class="font-primary">A</span>bout</h2>
+      <img src="img/Seb.jpg" />
+      <div class="name">Sebastian Canales</div>
+      <div class="vocation">Web application developer</div>
+      <div class="skills">
+        HTML / CSS / JavaScript / React.js /Redux / Python /Django / Express.js
+        / AWS (Basics) / Docker (Basics)
+      </div>
+      <p>
+      Currently I am studying web development at Tech Is
+      </p>
+      <div class="email">spideronyou100@gmail.com</div>
+      <div class="icons">
+        <a href="https://github.com/scan0102"><i class="bi bi-github"></i></a>
+        <a href="https://www.linkedin.com/feed/"><i class="bi bi-linkedin ms-10"></i></a>
+      </div>
     </div>
 
+    <div id="project">
+      <h2><span class="font-primary">P</span>roject</h2>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-</body>
+      <div class="card mb-3">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="./img/project-twitter.png" alt="Twitter Project" />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Twitter Clone</h5>
+              <p class="card-text">This is a twitter based project</p>
+              <p class="card-text">
+                <small class="text-muted">
+                  Test Login Account<br />
+                  Email : test@gmail.com<br />
+                  Password : 1234
+                </small>
+              </p>
+              <a href="#" target="_blank" class="btn btn-secondary"
+                >Website Link</a
+              >
+              <a href="#" target="_blank" class="btn btn-secondary"
+                >Github Link</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row">
+          <div class="col-md-4">
+            <img src="./img/project-netflix.png" alt="Twitter Project" />
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Netflix Clone</h5>
+              <p class="card-text">
+                This is a Netflix based project using HTML /CSS / JS
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  Test Login Account<br />
+                  Email : test@gmail.com<br />
+                  Password : 1234
+                </small>
+              </p>
+              <a href="#" target="_blank" class="btn btn-secondary"
+                >Website Link</a
+              >
+              <a href="#" target="_blank" class="btn btn-secondary"
+                >Github Link</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
