--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <p>
       Currently I am studying web development at Tech Is
       </p>
-      <div class="email">spideronyou100@gmail.com</div>
+      <div class="email">sebastiancanales2263@gmail.com</div>
       <div class="icons">
         <a href="https://github.com/scan0102"><i class="bi bi-github"></i></a>
         <a href="https://www.linkedin.com/feed/"><i class="bi bi-linkedin ms-10"></i></a>
