--- a/index.html
+++ b/index.html
@@ -55,74 +55,135 @@
         / AWS (Basics) / Docker (Basics)
       </div>
       <p>
-      Currently I am studying web development at Tech Is
+      As a Web Developer, I worked on
       </p>
       <div class="email">sebastiancanales2263@gmail.com</div>
       <div class="icons">
         <a href="https://github.com/scan0102"><i class="bi bi-github"></i></a>
-        <a href="https://www.linkedin.com/feed/"><i class="bi bi-linkedin ms-10"></i></a>
+        <a href="https://www.linkedin.com/in/sebastian-canales-03237b235"><i class="bi bi-linkedin ms-10"></i></a>
       </div>
     </div>
 
     <div id="project">
       <h2><span class="font-primary">P</span>roject</h2>
+      <div class="card mb-3">
+        <div class="row">
+          <div class="col-md-4">
+            <video class="project-video" autoplay controls muted>
+              <source src="video/Hive_Video.mp4" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Hive TechWare</h5>
+              <p class="card-text-description">
+                <strong>Project Description: </strong>A convenient and fun way to browse featured clothing & accessories from some of the best clothing brands online, especially aimed at teenagers. With this web app, you can browse products by any color you like or by trending colors, save products into favorites, and share products with friends on social media.<br /><br />
+                <strong>Skills Used: </strong>FrontEnd: React-Redux | Backend:
+                Django API.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  Test Login Account <br />
+                  Email: test@gmail.com <br />
+                  Password: 123456</small
+                >
+              </p>
+              <a
+                href="https://hive-tech-ware-frontend.herokuapp.com/"
+                target="blank"
+                class="btn btn-secondary"
+                >Website Link</a
+              >
+              <a
+                href="https://github.com/HiveTechware/Hivetechware"
+                target="blank"
+                class="btn btn-secondary"
+                >Github Link</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
 
       <div class="card mb-3">
         <div class="row">
           <div class="col-md-4">
-            <img src="./img/project-twitter.png" alt="Twitter Project" />
+            <video class="project-video" autoplay controls muted>
+              <source src="video/cool Shoes.mov" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
+          </div>
+          <div class="col-md-8">
+            <div class="card-body">
+              <h5 class="card-title">Cool Shoes</h5>
+              <p class="card-text-description">
+                <strong>Project Description: </strong>Cool Shoes is a prototype of a mini E-commerce web app, designed for buying and selling shoes online. It has great potential to be a better version of the conventional stores and boost online sales, reduce overpricing of products and provide more verified information, and make shopping easier.<br /><br />
+                <strong>Skills Used: </strong>FrontEnd: React-Redux | Backend:
+                Django API.
+              </p>
+              <p class="card-text">
+                <small class="text-muted">
+                  Test Login Account <br />
+                  Email: test@gmail.com <br />
+                  Password: 123456</small
+                >
+              </p>
+              <a
+                href="https://frontend-coolshoes.herokuapp.com/"
+                target="blank"
+                class="btn btn-secondary"
+                >Website Link</a
+              >
+              <a
+                href="https://github.com/scan0102/coolshoes"
+                target="blank"
+                class="btn btn-secondary"
+                >Github Link</a
+              >
+            </div>
+          </div>
+        </div>
+      </div>
+
+      <div class="card mb-3">
+        <div class="row">
+          <div class="col-md-4">
+            <video class="project-video" autoplay controls muted>
+              <source src="video/Twitter.mov" type="video/mp4" />
+              Your browser does not support the video tag.
+            </video>
           </div>
           <div class="col-md-8">
             <div class="card-body">
               <h5 class="card-title">Twitter Clone</h5>
-              <p class="card-text">This is a twitter based project</p>
-              <p class="card-text">
-                <small class="text-muted">
-                  Test Login Account<br />
-                  Email : test@gmail.com<br />
-                  Password : 1234
-                </small>
-              </p>
-              <a href="#" target="_blank" class="btn btn-secondary"
+              <p class="card-text-description">
+                <strong>Project Description: </strong>With this project, we created a platform where you can express your
+                thoughts anonymously, showcase your pictures, and much more on a
+                single website. Post, edit, or delete posts at the convenience of just a few
+                touches. This project is based on Twitter and anonymity adds to its special
+                features. Without the necessity of an account, you can share your thoughts
+                and memories with the world at any time. You can even learn CRUD(Create/Read/Update/Delete) through this project.
+                <br /><br />
+                <strong>Skills Used: </strong>FrontEnd: React-Redux | Backend:
+                Django API.
+              </p><br><br>
+              <a
+                href="https://twitterclone-sebastian.herokuapp.com/"
+                target="blank"
+                class="btn btn-secondary"
                 >Website Link</a
               >
-              <a href="#" target="_blank" class="btn btn-secondary"
+              <a
+                href="https://github.com/scan0102/Twitter-Clone"
+                target="blank"
+                class="btn btn-secondary"
                 >Github Link</a
               >
             </div>
           </div>
         </div>
       </div>
-
-      <div class="card mb-3">
-        <div class="row">
-          <div class="col-md-4">
-            <img src="./img/project-netflix.png" alt="Twitter Project" />
-          </div>
-          <div class="col-md-8">
-            <div class="card-body">
-              <h5 class="card-title">Netflix Clone</h5>
-              <p class="card-text">
-                This is a Netflix based project using HTML /CSS / JS
-              </p>
-              <p class="card-text">
-                <small class="text-muted">
-                  Test Login Account<br />
-                  Email : test@gmail.com<br />
-                  Password : 1234
-                </small>
-              </p>
-              <a href="#" target="_blank" class="btn btn-secondary"
-                >Website Link</a
-              >
-              <a href="#" target="_blank" class="btn btn-secondary"
-                >Github Link</a
-              >
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
 
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
